// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaire /> renders 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c7 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c7:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c7:checked:before {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c1 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de la convention collective. Si des primes ont été perçues, merci de les intégrer à la rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c3"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration du salaire ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewSalaire-yes"
    >
      <input
        class="c7"
        id="hasBrancheNewSalaire-yes"
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewSalaire-no"
    >
      <input
        class="c7"
        id="hasBrancheNewSalaire-no"
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
</div>
`;

exports[`<Salaire /> renders a question asking about income's regularity 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c7 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c7:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c7:checked:before {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c1 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de la convention collective. Si des primes ont été perçues, merci de les intégrer à la rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c3"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration du salaire ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewSalaire-yes"
    >
      <input
        checked=""
        class="c7"
        id="hasBrancheNewSalaire-yes"
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewSalaire-no"
    >
      <input
        class="c7"
        id="hasBrancheNewSalaire-no"
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <p
    class="c3"
  >
    Le salaire mensuel a-t-il été le même durant les 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewRegularSalaire-yes"
    >
      <input
        class="c7"
        id="hasBrancheNewRegularSalaire-yes"
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewRegularSalaire-no"
    >
      <input
        class="c7"
        id="hasBrancheNewRegularSalaire-no"
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
</div>
`;

exports[`<Salaire /> renders a table of fields of type number 1`] = `
.c8 {
  position: relative;
  overflow: hidden;
}

.c8:before,
.c8:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c8:before {
  left: -2rem;
}

.c8:after {
  right: -2rem;
}

.c9 {
  overflow-x: auto;
}

.c10 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c10 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c10 td,
.c10 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c10 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c10 thead,
.c10 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c10 tfoot {
  vertical-align: top;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c7 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c7:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c7:checked:before {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c1 {
  margin-top: 2rem;
}

.c11 tr > td:nth-child(2) {
  width: 70%;
  text-align: left;
}

.c13 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c13::-webkit-outer-spin-button,
.c13::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c14 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de la convention collective. Si des primes ont été perçues, merci de les intégrer à la rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c3"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration du salaire ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewSalaire-yes"
    >
      <input
        checked=""
        class="c7"
        id="hasBrancheNewSalaire-yes"
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewSalaire-no"
    >
      <input
        class="c7"
        id="hasBrancheNewSalaire-no"
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <p
    class="c3"
  >
    Le salaire mensuel a-t-il été le même durant les 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewRegularSalaire-yes"
    >
      <input
        class="c7"
        id="hasBrancheNewRegularSalaire-yes"
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewRegularSalaire-no"
    >
      <input
        checked=""
        class="c7"
        id="hasBrancheNewRegularSalaire-no"
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <table
        class="c10 c11"
      >
        <thead>
          <tr>
            <th>
              Mois
            </th>
            <th>
              Salaire mensuel ajusté (primes et temps partiel inclus)
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <label
                for="salaire0"
              >
                juillet 2019
              </label>
            </td>
            <td>
              <div
                class="c12"
              >
                <input
                  class="c13"
                  id="salaire0"
                  name="brancheNewIrregularSalaire[0].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c14"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salaire1"
              >
                juin 2019
              </label>
            </td>
            <td>
              <div
                class="c12"
              >
                <input
                  class="c13"
                  id="salaire1"
                  name="brancheNewIrregularSalaire[1].salary"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c14"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<Salaire /> renders an input field of type number 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c7 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c7:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c7:checked:before {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c4 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c1 {
  margin-top: 2rem;
}

.c9 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c9::-webkit-outer-spin-button,
.c9::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c10 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <p>
    Le salaire à renseigner pour cette convention collective inclut:
  </p>
  <ul>
    <li>
      les primes prévues au contrat de travail
    </li>
  </ul>
  <strong>
    mais elle exclut
  </strong>
  :
  <ul>
    <li>
      les heures supplémentaires au delà de l’heure normale de l’entreprise
    </li>
    <li>
      les majorations/indemnités liées à un déplacement ou un détachement
    </li>
  </ul>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      role="alert"
    >
      Attention, les éventuelles 
      <strong>
        primes
      </strong>
       renseignées précédemment ne seront pas prises en compte dans le calcul de l’indemnité de la convention collective. Si des primes ont été perçues, merci de les intégrer à la rémunération ci-après.
      <br />
      Aussi, si il y en a, les mois effectués en 
      <strong>
        temps partiel
      </strong>
       
      sont à considérer comme ceux effectués en temps plein.
    </div>
  </div>
  <p
    class="c3"
  >
    De ce fait, avez-vous une modification à faire dans la déclaration du salaire ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewSalaire-yes"
    >
      <input
        checked=""
        class="c7"
        id="hasBrancheNewSalaire-yes"
        name="hasBrancheNewSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewSalaire-no"
    >
      <input
        class="c7"
        id="hasBrancheNewSalaire-no"
        name="hasBrancheNewSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <p
    class="c3"
  >
    Le salaire mensuel a-t-il été le même durant les 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c4"
    >
      *
    </span>
  </p>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="hasBrancheNewRegularSalaire-yes"
    >
      <input
        checked=""
        class="c7"
        id="hasBrancheNewRegularSalaire-yes"
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c6"
      for="hasBrancheNewRegularSalaire-no"
    >
      <input
        class="c7"
        id="hasBrancheNewRegularSalaire-no"
        name="hasBrancheNewRegularSalaire"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <p>
    Salaire mensuel ajusté (primes et temps partiel inclus)
  </p>
  <div
    class="c8"
  >
    <input
      class="c9"
      name="brancheNewRegularSalaire"
      type="number"
      value=""
    />
    <span
      aria-hidden="true"
      class="c10"
    >
      €
    </span>
  </div>
</div>
`;
